# ScorpioRekrutacja

./: CMakeLists.txt  README.md  test.txt
include/: main.hpp
include/backend/: basic_tester.hpp  motor.hpp
include/backend_interface/: component.hpp  tester.hpp
include/solution_interface/: interface.hpp  solver.hpp
src/: main.cpp
src/backend/: basic_tester.cpp  motor.cpp
src/solution/: TargetSolver.cpp  TargetSolver.h  solution.cpp  solution.h  targetSolver.cpp  targetSolver.h
unit_tests/: test_basic_tester.cpp
